# random

./: CMakeLists.txt  Makefile  README.md  arch1_project2.elf  buzzer.c  buzzer.h  led.c  led.h  pitches.h  project_main.c  state_machine.c  state_machine.h  switches.c  switches.h  timer.c  timer.h  timer.s
